src/gen/JythonParser.java
package gen;// Generated from C:/Users/User/IdeaProjects/CompilerPeojectJava/grammer\Jython.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, SUB=2, MUL=3, DIV=4, MOD=5, GT=6, LT=7, EQUAL=8, LE=9, GE=10, NOTEQUAL=11, 
		ASSIGN=12, ADD_ASSIGN=13, SUB_ASSIGN=14, MUL_ASSIGN=15, DIV_ASSIGN=16, 
		MOD_ASSIGN=17, CLASS=18, IMPORT=19, DEF=20, VOID=21, RETURN=22, AND=23, 
		OR=24, IF=25, WHILE=26, ELIF=27, ELSE=28, PRINT=29, FOR=30, IN=31, RANGE=32, 
		NONE=33, OPEN_BRACKET=34, CLOSE_BRACKET=35, OPEN_PARANTESES=36, CLOSE_PARANTESES=37, 
		OPEN_BRACES=38, CLOSE_BRACES=39, COMMA=40, DOT=41, TYPE=42, INT=43, FLOATING_POINT=44, 
		STRING=45, BOOL=46, CLASSNAME=47, ID=48, LETTER=49, INTEGER=50, FLOAT=51, 
		DIGIT=52, OPEN_COMMENT=53, CLOSE_COMMENT=54, COMMENT=55, ONE_LINE_COMMENT=56, 
		WHITESPACE=57;
	public static final int
		RULE_program = 0, RULE_importclass = 1, RULE_classDef = 2, RULE_class_body = 3, 
		RULE_varDec = 4, RULE_arrayDec = 5, RULE_methodDec = 6, RULE_constructor = 7, 
		RULE_parameter = 8, RULE_statement = 9, RULE_return_statment = 10, RULE_condition_list = 11, 
		RULE_condition = 12, RULE_if_statment = 13, RULE_while_statment = 14, 
		RULE_if_else_statment = 15, RULE_print_statment = 16, RULE_for_statment = 17, 
		RULE_method_call = 18, RULE_assignment = 19, RULE_exp = 20, RULE_prefixexp = 21, 
		RULE_args = 22, RULE_explist = 23, RULE_arithmetic_operator = 24, RULE_relational_operators = 25, 
		RULE_assignment_operators = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importclass", "classDef", "class_body", "varDec", "arrayDec", 
			"methodDec", "constructor", "parameter", "statement", "return_statment", 
			"condition_list", "condition", "if_statment", "while_statment", "if_else_statment", 
			"print_statment", "for_statment", "method_call", "assignment", "exp", 
			"prefixexp", "args", "explist", "arithmetic_operator", "relational_operators", 
			"assignment_operators"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'=='", "'<='", 
			"'>='", "'!='", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'class'", 
			"'import'", "'def'", "'void'", "'return'", "'and'", "'or'", "'if'", "'while'", 
			"'elif'", "'else'", "'print'", "'for'", "'in'", "'range'", "'none'", 
			"'['", "']'", "'('", "')'", "'{'", "'}'", "','", "'.'", null, "'int'", 
			"'float'", "'string'", "'bool'", null, null, null, null, null, null, 
			"'#*'", "'*#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADD", "SUB", "MUL", "DIV", "MOD", "GT", "LT", "EQUAL", "LE", "GE", 
			"NOTEQUAL", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
			"MOD_ASSIGN", "CLASS", "IMPORT", "DEF", "VOID", "RETURN", "AND", "OR", 
			"IF", "WHILE", "ELIF", "ELSE", "PRINT", "FOR", "IN", "RANGE", "NONE", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARANTESES", "CLOSE_PARANTESES", 
			"OPEN_BRACES", "CLOSE_BRACES", "COMMA", "DOT", "TYPE", "INT", "FLOATING_POINT", 
			"STRING", "BOOL", "CLASSNAME", "ID", "LETTER", "INTEGER", "FLOAT", "DIGIT", 
			"OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", "ONE_LINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jython.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<ImportclassContext> importclass() {
			return getRuleContexts(ImportclassContext.class);
		}
		public ImportclassContext importclass(int i) {
			return getRuleContext(ImportclassContext.class,i);
		}
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(54);
				importclass();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CLASS) {
				{
				setState(60);
				classDef();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportclassContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JythonParser.IMPORT, 0); }
		public TerminalNode CLASSNAME() { return getToken(JythonParser.CLASSNAME, 0); }
		public ImportclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterImportclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitImportclass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitImportclass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportclassContext importclass() throws RecognitionException {
		ImportclassContext _localctx = new ImportclassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importclass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(IMPORT);
			setState(64);
			match(CLASSNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefContext extends ParserRuleContext {
		public Token className;
		public Token classParent;
		public Token classParent2;
		public TerminalNode CLASS() { return getToken(JythonParser.CLASS, 0); }
		public TerminalNode OPEN_BRACES() { return getToken(JythonParser.OPEN_BRACES, 0); }
		public TerminalNode CLOSE_BRACES() { return getToken(JythonParser.CLOSE_BRACES, 0); }
		public List<TerminalNode> CLASSNAME() { return getTokens(JythonParser.CLASSNAME); }
		public TerminalNode CLASSNAME(int i) {
			return getToken(JythonParser.CLASSNAME, i);
		}
		public TerminalNode OPEN_PARANTESES() { return getToken(JythonParser.OPEN_PARANTESES, 0); }
		public TerminalNode CLOSE_PARANTESES() { return getToken(JythonParser.CLOSE_PARANTESES, 0); }
		public List<Class_bodyContext> class_body() {
			return getRuleContexts(Class_bodyContext.class);
		}
		public Class_bodyContext class_body(int i) {
			return getRuleContext(Class_bodyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JythonParser.COMMA, i);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterClassDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitClassDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitClassDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(CLASS);
			setState(67);
			((ClassDefContext)_localctx).className = match(CLASSNAME);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_PARANTESES) {
				{
				setState(68);
				match(OPEN_PARANTESES);
				setState(69);
				((ClassDefContext)_localctx).classParent = match(CLASSNAME);
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(70);
					match(COMMA);
					setState(71);
					((ClassDefContext)_localctx).classParent2 = match(CLASSNAME);
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77);
				match(CLOSE_PARANTESES);
				}
			}

			setState(80);
			match(OPEN_BRACES);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEF) | (1L << TYPE) | (1L << CLASSNAME))) != 0)) {
				{
				{
				setState(81);
				class_body();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(CLOSE_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public MethodDecContext methodDec() {
			return getRuleContext(MethodDecContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public ArrayDecContext arrayDec() {
			return getRuleContext(ArrayDecContext.class,0);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitClass_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitClass_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_body);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				varDec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				methodDec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				constructor();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				arrayDec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public Token varType;
		public Token varClassName;
		public Token varId;
		public TerminalNode ID() { return getToken(JythonParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(JythonParser.TYPE, 0); }
		public TerminalNode CLASSNAME() { return getToken(JythonParser.CLASSNAME, 0); }
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitVarDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				{
				setState(95);
				((VarDecContext)_localctx).varType = match(TYPE);
				}
				break;
			case CLASSNAME:
				{
				setState(96);
				((VarDecContext)_localctx).varClassName = match(CLASSNAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(99);
			((VarDecContext)_localctx).varId = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDecContext extends ParserRuleContext {
		public Token arrType;
		public Token arrClassName;
		public Token arrId;
		public TerminalNode OPEN_BRACKET() { return getToken(JythonParser.OPEN_BRACKET, 0); }
		public TerminalNode INTEGER() { return getToken(JythonParser.INTEGER, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(JythonParser.CLOSE_BRACKET, 0); }
		public TerminalNode ID() { return getToken(JythonParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(JythonParser.TYPE, 0); }
		public TerminalNode CLASSNAME() { return getToken(JythonParser.CLASSNAME, 0); }
		public ArrayDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterArrayDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitArrayDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitArrayDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayDecContext arrayDec() throws RecognitionException {
		ArrayDecContext _localctx = new ArrayDecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				{
				setState(101);
				((ArrayDecContext)_localctx).arrType = match(TYPE);
				}
				break;
			case CLASSNAME:
				{
				setState(102);
				((ArrayDecContext)_localctx).arrClassName = match(CLASSNAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(105);
			match(OPEN_BRACKET);
			setState(106);
			match(INTEGER);
			setState(107);
			match(CLOSE_BRACKET);
			setState(108);
			((ArrayDecContext)_localctx).arrId = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDecContext extends ParserRuleContext {
		public Token methodType;
		public Token methodId;
		public StatementContext methodStatement;
		public TerminalNode DEF() { return getToken(JythonParser.DEF, 0); }
		public TerminalNode OPEN_PARANTESES() { return getToken(JythonParser.OPEN_PARANTESES, 0); }
		public TerminalNode CLOSE_PARANTESES() { return getToken(JythonParser.CLOSE_PARANTESES, 0); }
		public TerminalNode OPEN_BRACES() { return getToken(JythonParser.OPEN_BRACES, 0); }
		public TerminalNode CLOSE_BRACES() { return getToken(JythonParser.CLOSE_BRACES, 0); }
		public TerminalNode ID() { return getToken(JythonParser.ID, 0); }
		public TerminalNode VOID() { return getToken(JythonParser.VOID, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public TerminalNode TYPE() { return getToken(JythonParser.TYPE, 0); }
		public TerminalNode CLASSNAME() { return getToken(JythonParser.CLASSNAME, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MethodDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterMethodDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitMethodDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitMethodDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDecContext methodDec() throws RecognitionException {
		MethodDecContext _localctx = new MethodDecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(DEF);
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
			case CLASSNAME:
				{
				setState(111);
				((MethodDecContext)_localctx).methodType = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TYPE || _la==CLASSNAME) ) {
					((MethodDecContext)_localctx).methodType = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case VOID:
				{
				setState(112);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(115);
			((MethodDecContext)_localctx).methodId = match(ID);
			setState(116);
			match(OPEN_PARANTESES);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE || _la==CLASSNAME) {
				{
				{
				setState(117);
				parameter();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(CLOSE_PARANTESES);
			setState(124);
			match(OPEN_BRACES);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << FOR) | (1L << TYPE) | (1L << CLASSNAME) | (1L << ID))) != 0)) {
				{
				{
				setState(125);
				((MethodDecContext)_localctx).methodStatement = statement();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(CLOSE_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(JythonParser.DEF, 0); }
		public TerminalNode OPEN_PARANTESES() { return getToken(JythonParser.OPEN_PARANTESES, 0); }
		public TerminalNode CLOSE_PARANTESES() { return getToken(JythonParser.CLOSE_PARANTESES, 0); }
		public TerminalNode OPEN_BRACES() { return getToken(JythonParser.OPEN_BRACES, 0); }
		public TerminalNode CLOSE_BRACES() { return getToken(JythonParser.CLOSE_BRACES, 0); }
		public TerminalNode TYPE() { return getToken(JythonParser.TYPE, 0); }
		public TerminalNode CLASSNAME() { return getToken(JythonParser.CLASSNAME, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JythonListener ) ((JythonListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JythonVisitor ) return ((JythonVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(DEF);
			setState(134);
			_la = _input.LA(1);
			if ( !(_la==TYPE || _la==CLASSNAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(135);
			match(OPEN_PARANTESES);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE || _la==CLASSNAME) {
				{
				{
				setState(136);
				parameter();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(CLOSE_PARANTESES);
			setState(143);
			match(OPEN_BRACES);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << FOR) | (1L << TYPE) | (1L << CLASSNAME) | (1L << ID))) != 0)) {
				{
				{
				setState(144);
				statement();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(CLOSE_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
